--- a/.github/workflows/createScratchOrg.yml
+++ b/.github/workflows/createScratchOrg.yml
@@ -61,8 +61,8 @@ jobs:
         id: create_scratch_org
         run: |
           sfdx force:auth:jwt:grant --clientid $PROD_CONSUMERKEY \
-            --jwtkeyfile certificate/server.key \
-            --username $PROD_USERNAME \
+            --jwtkeyfile=certificate/server.key \
+            --username=$PROD_USERNAME \
             --setdefaultdevhubusername \
             --setalias=$PROD_ALIAS
 
