--- a/.github/workflows/createScratchOrg.yml
+++ b/.github/workflows/createScratchOrg.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Create scratch Org
         id: create_scratch_org
         run: |
-          sfdx force:auth:jwt:grant --clientid $PROD_CONSUMERKEY \
+          sfdx force:auth:jwt:grant --clientid=$PROD_CONSUMERKEY \
             --jwtkeyfile=certificate/server.key \
             --username=$PROD_USERNAME \
             --setdefaultdevhubusername \
