--- a/.github/workflows/createScratchOrg.yml
+++ b/.github/workflows/createScratchOrg.yml
@@ -67,6 +67,19 @@ jobs:
           # --setalias=$PROD_ALIAS
           # echo "Login to prod"
 
+      - name: create-json
+        id: create-json
+        uses: jsdaniell/create-json@1.1.2
+        with:
+          name: "cred.json"
+          json: '{"username": "test-lvmqwye7txkd@example.com","password": "aaaa", "instanceUrl": "https://java-innovation-3701.my.salesforce.com"}'
+
+      - name: Archive credentials
+        uses: actions/upload-artifact@v3
+        with:
+          name: scratch-cred
+          path: cred.json
+
       - name: Create scratch Org
         id: create_scratch_org
         run: |
@@ -81,25 +94,15 @@ jobs:
           #  jq '{username: .result.username, password: .result.password, instanceUrl: .result.instanceUrl}' > cred.json
 
           # cat creds.json
-
-          JSON_TEXT={ \
-          "username": "test-lvmqwye7txkd@example.com", \
-          "password": "yNcg^x3nwppge", \
-          "instanceUrl": "https://java-innovation-3701.my.salesforce.com" \
-          }
-
-          echo "${JSON_TEXT}" > cred.json
-
+          
+          
+          cat cred.json
 
           echo "::set-output name=sc_username::$(cat cred.json | jq '.username')"
           echo "::set-output name=sc_password::$(cat cred.json | jq '.password')"
           echo "::set-output name=sc_instanceUrl::$(cat cred.json | jq '.instanceUrl')"
-
-      - name: Archive credentials
-        uses: actions/upload-artifact@v3
-        with:
-          name: scratch-cred
-          path: cred.json
+        
+        
 
         env:
           PROD_CONSUMERKEY: ${{ secrets.PROD_CONSUMERKEY }}
