--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -1,11 +1,11 @@
-name: Dev flow
+name: Validate PR
 on:
   pull_request:
     types:
       - opened
       - closed
     branches:
-      - feature/*
+      - 'feature/**'
 
 jobs:
   build:
