--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Dump GitHub context
         id: github_context_step
         run: echo '${{ toJSON(github) }}'
+      - name: Check APEX
+        uses: legetz/setup-pmd@v6.48
+                - run: pmd -language apex --dir . --rulesets ./pmd-rules-example.xml -f textcolor
 
   test:
     runs-on: ubuntu-latest
