--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -18,7 +18,7 @@ jobs:
         run: echo '${{ toJSON(github) }}'
       - name: Check APEX
         uses: legetz/setup-pmd@v6.48
-                - run: pmd -language apex --dir . --rulesets ./pmd-rules-example.xml -f textcolor
+        run: pmd -language apex --dir . --rulesets ./pmd-rules-example.xml -f textcolor
 
   test:
     runs-on: ubuntu-latest
