--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -22,6 +22,11 @@ jobs:
         id: github_context_step
         run: echo '${{ toJSON(github) }}'
       - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
       - name: Install Scanner
         run: |
           echo 'y' | sfdx plugins:install @salesforce/sfdx-scanner@2.13.7
