--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -22,7 +22,9 @@ jobs:
         id: github_context_step
         run: echo '${{ toJSON(github) }}'
       - uses: actions/checkout@v3
-
+      - name: Check APEX
+        uses: legetz/setup-pmd@v6.48
+                - run: pmd -language apex --dir . --rulesets ./pmd-rules-example.xml -f text
 
 
   test:
