--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -26,6 +26,10 @@ jobs:
       - uses: jwgmeligmeyling/pmd-github-action@master
         with:
           path: 'pmd.xml'
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: pmd-report.sarif
 
 
   test:
