--- a/.github/workflows/createScratchOrg.yml
+++ b/.github/workflows/createScratchOrg.yml
@@ -80,7 +80,7 @@ jobs:
           echo "Login to prod"
 
       - name: Create scratch Org
-        if: { { false } }
+        if: false
         id: create_scratch_org
         run: |
           sfdx force:org:create --setdefaultusername \
