--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,32 +40,6 @@ jobs:
       sc_duration: '2'
     secrets: inherit
 
-  checkOutput:
-    runs-on: ubuntu-latest
-    needs:
-      - init
-      - create_scratch_org
-    steps:
-      - name: Archive credentials
-        uses: actions/download-artifact@v3
-        with:
-          name: scratch-cred
-          path: creds
-
-      - name: Validate artifact
-        if: always()
-        run: |
-          pwd
-          ls -laR
-          cat creds/cred.json
-
-      - name: Validate Job Output
-        if: always()
-        run: |
-          echo ${{ needs.create_scratch_org.outputs.sc_username }}
-          echo ${{ needs.create_scratch_org.outputs.sc_password }}
-          echo ${{ needs.create_scratch_org.outputs.sc_instanceUrl }}
-
 
   dev-flow:
     runs-on: ubuntu-latest
@@ -114,12 +88,12 @@ jobs:
           path: cred.json
 
       - name: Generate dif
-        env:
-          GENERATED_DIFF_FOLDER='generated'
         run: |
           MERGE_BASE=$(git merge-base origin/main"  HEAD);
           sfdx sfpowerkit:project:diff --revisionfrom "${MERGE_BASE}" --revisionto HEAD --output ${GENERATED_DIFF_FOLDER} --generatedestructive
           ls -laR ${GENERATED_DIFF_FOLDER}
+        env:
+          GENERATED_DIFF_FOLDER: 'generatedDiff'
         continue-on-error: true
 
       - name: Run tests
