--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,9 @@
 name: CI job
 on:
   workflow_dispatch:
-  push:
+  pull_request:
     branches:
       - feature/**
-      - main
-#  pull_request:
 
 env:
   PROD_CONSUMERKEY: ${{ secrets.PROD_CONSUMERKEY }}
