--- a/.github/workflows/createScratchOrg.yml
+++ b/.github/workflows/createScratchOrg.yml
@@ -97,11 +97,11 @@ jobs:
           #          sfdx force:org:display  --verbose --json | \
           #           jq '{username: .result.username, password: .result.password, instanceUrl: .result.instanceUrl}' > cred.json
           #
-          #          cat cred.json
-               
-               echo "::set-output name=sc_username::$(cat cred.json | jq '.username')"
-               echo "::set-output name=sc_password::$(cat cred.json | jq '.password')"
-               echo "::set-output name=sc_instanceUrl::$(cat cred.json | jq '.instanceUrl')"
+             cat cred.json
+          
+             echo "::set-output name=sc_username::$(cat cred.json | jq '.username')"
+             echo "::set-output name=sc_password::$(cat cred.json | jq '.password')"
+             echo "::set-output name=sc_instanceUrl::$(cat cred.json | jq '.instanceUrl')"
 
       - name: Archive credentials
         uses: actions/upload-artifact@v3
