--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,8 +71,8 @@ jobs:
           
           sfdx force:auth:jwt:grant --clientid $PROD_CONSUMERKEY \
             --jwtkeyfile certificate/server.key \
-            --username $(cat cred.json | jq '.username') \
-            --instanceurl $(cat cred.json | jq '.instanceUrl') \
+            --username $(cat cred.json | jq -r '.username') \
+            --instanceurl $(cat cred.json | jq -r '.instanceUrl') \
             --setdefaultdevhubusername \
             --setalias $SC_ORG_ALIAS
           
