--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,36 +9,18 @@ env:
   SC_ORG_ALIAS: "GABOR_SC"
 
 jobs:
-  init:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Cache scratchOrg cred
-        id: cache_scratchOrg_cred
-        uses: actions/cache@v3
-        with:
-          path: |
-            cred.json
-          key: ${{ github.workspace }}-${{ github.ref }}
-      - name: 'Login to scratch org'
-        if: needs.init.steps.cache_scratchOrg_cred.outputs.cache-hit == 'true'
-        run: echo "WE have cache"
-
-
   create_scratch_org:
-    needs:
-      - init
-    if: needs.init.steps.cache_scratchOrg_cred.outputs.cache-hit != 'true'
     uses: gambe94/sfdxAction/.github/workflows/createScratchOrg.yml@feature/A
     with:
       sc_name: ${SC_ORG_ALIAS}
       sc_duration: '2'
+      cred_key: ${{ github.workspace }}-${{ github.ref }}
     secrets: inherit
 
 
   dev-flow:
     runs-on: ubuntu-latest
     needs:
-      - init
       - create_scratch_org
     container:
       image: docker://gambe94/sfdx:2.0.1
@@ -53,7 +35,6 @@ jobs:
           fetch-depth: 0
 
       - name: Pull creds
-        if: needs.init.steps.cache_scratchOrg_cred.outputs.cache-hit != 'true'
         uses: actions/download-artifact@v3
         with:
           name: scratch-cred
@@ -67,7 +48,6 @@ jobs:
           echo ${{ needs.create_scratch_org.outputs.sc_password }}
           echo ${{ needs.create_scratch_org.outputs.sc_instanceUrl }}
           
-          ls -laR
           
           sfdx force:auth:jwt:grant --clientid $PROD_CONSUMERKEY \
             --jwtkeyfile certificate/server.key \
@@ -83,16 +63,11 @@ jobs:
         continue-on-error: true
 
 
-      #      - name: Archive credentials
-      #        uses: actions/upload-artifact@v3
-      #        with:
-      #          name: scratch-cred
-      #          path: cred.json
-
       - name: Generate dif
         run: |
-          MERGE_BASE=$(git merge-base origin/main  HEAD);
-          sfdx sfpowerkit:project:diff --revisionfrom "${MERGE_BASE}" --revisionto HEAD --output ${GENERATED_DIFF_FOLDER} --generatedestructive
+          git branch -r
+          git merge-base origin/main  HEAD
+          # sfdx sfpowerkit:project:diff --revisionfrom "${MERGE_BASE}" --revisionto HEAD --output ${GENERATED_DIFF_FOLDER} --generatedestructive
           ls -laR ${GENERATED_DIFF_FOLDER}
         env:
           GENERATED_DIFF_FOLDER: 'generatedDiff'
