--- a/.github/workflows/createScratchOrg.yml
+++ b/.github/workflows/createScratchOrg.yml
@@ -25,6 +25,10 @@ on:
         default: "2"
         required: true
         type: string
+      cred_key:
+        required: true
+        type: string
+
     outputs:
       sc_username:
         description: "Created scratch org username"
@@ -36,7 +40,29 @@ on:
         description: "Created scratch org instanceURL"
         value: ${{ jobs.dev-flow.outputs.sc_instanceUrl }}
 jobs:
+  init:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Cache scratchOrg cred
+        id: cache_scratchOrg_cred
+        uses: actions/cache@v3
+        with:
+          path: |
+            cred.json
+          key: ${{ inputs.cred_key }}
+
+      - name: Archive credentials
+        uses: actions/upload-artifact@v3
+        if: steps.cache_scratchOrg_cred.outputs.cache-hit == 'true'
+        with:
+          name: scratch-cred
+          path: cred.json
+
+
   create-sratch-org:
+    needs:
+      - init
+    if: needs.init.steps.cache_scratchOrg_cred.outputs.cache-hit != 'true'
     runs-on: ubuntu-latest
     outputs:
       sc_username: ${{ steps.create_scratch_org.outputs.sc_username }}
