--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -32,7 +32,11 @@ jobs:
       - name: Download artifact
         uses: dawidd6/action-download-artifact@v2
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          workflow: artifact.yml
           name: my-artifact
+
+
 
       - name: check artifact
         run: ls -la
