--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -27,10 +27,10 @@ jobs:
 
       - run: mkdir -p path/to/artifact
       - run: echo hello > path/to/artifact/world.txt
-      - uses: actions/upload-artifact@v3
-        with:
-          name: my-artifact
-          path: path/to/artifact/world.txt
+      #      - uses: actions/upload-artifact@v3
+      #        with:
+      #          name: my-artifact
+      #          path: path/to/artifact/world.txt
 
       - name: Download artifact
         uses: dawidd6/action-download-artifact@v2
