--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -36,6 +36,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          workflow: artifact.yml
           name: my-artifact
 
 
